# aoe2-age-up

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  skills.md  spec.md
.github/workflows/: release.yml
build-orders/: archers-1range-hera.yaml  archers-britons-19pop.yaml  archers-britons.yaml  fast-castle-cavalier.yaml  scouts-generic.yaml
docs/superpowers/plans/: 2026-04-28-phase-2-4-capture-ocr-autoadvance.md  2026-04-28-phase1-skeleton.md
docs/superpowers/specs/: 2026-04-28-phase1-skeleton-design.md  2026-05-03-aoe2-coach-design.md
spec/: aoe2-coach-lib.md  aoe2-coach-spec.md  spec.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  hotkeys.rs  ipc.rs  lib.rs  main.rs  state.rs  storage.rs
src-tauri/src/build_order/: engine.rs  mod.rs  parser.rs
src-tauri/src/capture/: fallback.rs  loop_task.rs  mod.rs  windows.rs
src-tauri/src/ocr/: fixture.rs  mod.rs  preprocess.rs  segment.rs  template.rs  tesseract.rs  windows_ocr.rs
src-tauri/tests/: build_order_integration.rs  calibration_preview.rs  extract_templates.rs  ocr_calibration_finder.rs  ocr_e2e_test.rs  ocr_pipeline_integration.rs  ocr_screenshot_diagnostic.rs
src/components/: BuildOrderLibrary.tsx  CalibrationWizard.tsx  Overlay.tsx  PeekOverlay.tsx  Settings.tsx  StepCard.tsx
src/hooks/: useBuildOrder.ts  useGameState.ts  useTauriCommand.ts
src/lib/: format.ts  types.ts
src/styles/: overlay.css
website/: index.html
website/landing/: data.js  overlay-demo.jsx  page.jsx  styles.css
