[package]
name = "aoe-overlay"
version = "0.4.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
global-hotkey = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
xcap = "0.0.14"
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }
imageproc = "0.25"
windows = { version = "0.61", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Globalization",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
